# mathoclock

./: .env.example  .gitignore  Dockerfile.jenkins  Jenkinsfile  README.md  docker-compose.yml  flake.nix
.direnv/: flake-profile-3-link  flake-profile-4-link  flake-profile-41-link
api/: Cargo.toml  build.rs
api/proto/: mathoclock.proto
api/src/: main.rs  math.rs  server.rs
